# SystemAbstractions

./: .gitignore  CMakeLists.txt  DiagnosticsContext.cpp  DiagnosticsReceiver.hpp  DiagnosticsSender.cpp  DiagnosticsSender.hpp  DiagnosticsStreamReporter.cpp  DiagnosticsStreamReporter.hpp  DirectoryMonitor.hpp  DynamicLibrary.hpp  File.cpp  File.hpp  Files.vcxproj  Files.vcxproj.filters  IFile.h  IFile.hpp  IFileCollection.h  IFileCollection.hpp  NetworkConnection.cpp  NetworkConnection.hpp  NetworkConnectionImpl.hpp  NetworkEndpoint.cpp  NetworkEndpoint.hpp  NetworkEndpointImpl.hpp  OSFile.cpp  OSFile.h  OSFile.hpp  README.md  SConscript  SConscript.orig  StringExtensions.cpp  StringExtensions.h  StringExtensions.hpp  StringExtensions.vcxproj  StringExtensions.vcxproj.filters  StringFile.cpp  StringFile.h  StringFile.hpp  Subprocess.hpp  SystemAbstractions.vcxproj  (+3 more)
Files.xcodeproj/: project.pbxproj
Linux/: ClipboardLinux.cpp  DirectoryMonitorLinux.cpp  DynamicLibraryLinux.cpp  FileLinux.cpp  OSFileLinux.cpp  TargetInfoLinux.cpp
Mach/: ClipboardMach.mm  DirectoryMonitorMach.cpp  DynamicLibraryMach.cpp  OSFileMach.cpp  TargetInfoMach.cpp  TimeMach.cpp
Posix/: DynamicLibraryPosix.cpp  FilePosix.cpp  FilePosix.hpp  NetworkConnectionPosix.cpp  NetworkConnectionPosix.hpp  NetworkEndpointPosix.cpp  NetworkEndpointPosix.hpp  PipeSignal.cpp  PipeSignal.hpp  SubprocessPosix.cpp  TimePosix.cpp
StringExtensions.xcodeproj/: project.pbxproj
SystemAbstractions.xcodeproj/: project.pbxproj
Win32/: ClipboardWin32.cpp  DirectoryMonitorWin32.cpp  DynamicLibraryWin32.cpp  FileWin32.cpp  NetworkConnectionWin32.cpp  NetworkConnectionWin32.hpp  NetworkEndpointWin32.cpp  NetworkEndpointWin32.hpp  OSFileWin32.cpp  SubprocessWin32.cpp  TargetInfoWin32.cpp  TimeWin32.cpp
include/SystemAbstractions/: Clipboard.hpp  CryptoRandom.hpp  DiagnosticsContext.hpp  DiagnosticsReceiver.hpp  DiagnosticsSender.hpp  DiagnosticsStreamReporter.hpp  DirectoryMonitor.hpp  DynamicLibrary.hpp  File.hpp  IFileSystemEntry.hpp  INetworkConnection.hpp  NetworkConnection.hpp  NetworkConnectionImpl.hpp  NetworkEndpoint.hpp  NetworkEndpointImpl.hpp  Service.hpp  StringExtensions.hpp  StringFile.hpp  Subprocess.hpp  TargetInfo.hpp  Time.hpp
src/: DataQueue.cpp  DataQueue.hpp  DiagnosticsContext.cpp  DiagnosticsSender.cpp  DiagnosticsStreamReporter.cpp  File.cpp  FileImpl.hpp  NetworkConnection.cpp  NetworkConnectionImpl.hpp  NetworkEndpoint.cpp  NetworkEndpointImpl.hpp  StringExtensions.cpp  StringFile.cpp  SubprocessInternal.hpp
src/Linux/: ClipboardLinux.cpp  DirectoryMonitorLinux.cpp  FileLinux.cpp  ServiceLinux.cpp  SubprocessLinux.cpp  TargetInfoLinux.cpp  TimeLinux.cpp
src/Mach/: ClipboardMach.mm  DirectoryMonitorMach.cpp  FileMach.cpp  ServiceMach.cpp  SubprocessMach.cpp  TargetInfoMach.cpp  TimeMach.cpp
src/Posix/: CryptoRandomPosix.cpp  DynamicLibraryImpl.hpp  DynamicLibraryPosix.cpp  FilePosix.cpp  FilePosix.hpp  NetworkConnectionPosix.cpp  NetworkConnectionPosix.hpp  NetworkEndpointPosix.cpp  NetworkEndpointPosix.hpp  PipeSignal.cpp  PipeSignal.hpp  ServicePosix.cpp  SubprocessPosix.cpp  TimePosix.cpp
src/Win32/: ClipboardWin32.cpp  CryptoRandomWin32.cpp  DirectoryMonitorWin32.cpp  DynamicLibraryWin32.cpp  FileWin32.cpp  NetworkConnectionWin32.cpp  NetworkConnectionWin32.hpp  NetworkEndpointWin32.cpp  NetworkEndpointWin32.hpp  ServiceWin32.cpp  SubprocessWin32.cpp  TargetInfoWin32.cpp  TimeWin32.cpp
test/: CMakeLists.txt
test/MockDynamicLibrary/: CMakeLists.txt
test/MockDynamicLibrary/src/: MockDynamicLibrary.cpp
test/MockSubprocess/: CMakeLists.txt
test/MockSubprocess/src/: main.cpp
test/src/: ClipboardTests.cpp  CryptoRandomTests.cpp  DataQueueTests.cpp  DiagnosticsContextTests.cpp  DiagnosticsSenderTests.cpp  DiagnosticsStreamReporterTests.cpp  DirectoryMonitorTests.cpp  DynamicLibraryTests.cpp  FileTests.cpp  NetworkConnectionTests.cpp  NetworkEndpointTests.cpp  StringExtensionsTests.cpp  StringFileTests.cpp  SubprocessTests.cpp
